add guards, controllers, servises for danceStyles and masterClasses

--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-REDIS_HOST: localhost
-REDIS_PORT: 6379
-PRIVATE_KEY:SHKODA
+REDIS_HOST=localhost
+REDIS_PORT=6379
+PRIVATE_KEY=SHKODA
 
 DATABASE_URL="postgresql://postgres:admin@localhost:5432/Joosi?schema=public"
