--- a/.development.env
+++ b/.development.env
@@ -5,5 +5,5 @@ POSTGRES_DB=Joosi
 POSTGRES_PASSWORD= admin
 POSTGRES_PORT=5432
 PRIVATE_KEY=secret_key
-REDIS_HOST: redis_cp
-REDIS_PORT: 6379
+REDIS_HOST=redis_cp
+REDIS_PORT=6379
