--- a/.local.env
+++ b/.local.env
@@ -4,6 +4,6 @@ POSTGRES_USER=postgres
 POSTGRES_DB=Joosi
 POSTGRES_PASSWORD= admin
 POSTGRES_PORT=5432
-REDIS_HOST: localhost
-REDIS_PORT: 6379
-PRIVATE_KEY:SHKODA
+REDIS_HOST=localhost
+REDIS_PORT=6379
+PRIVATE_KEY=SHKODA
