add file upload

--- a/.local.env
+++ b/.local.env
@@ -7,3 +7,8 @@ POSTGRES_PORT=5432
 REDIS_HOST=localhost
 REDIS_PORT=6379
 PRIVATE_KEY=SHKODA
+
+AWS_REGION=eu-central-1
+AWS_ACCESS_KEY_ID=AKIA6BGIF76PBV65OPMO
+AWS_SECRET_ACCESS_KEY=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
+AWS_PUBLIC_BUCKET_NAME=joosi
