--- a/.env
+++ b/.env
@@ -8,3 +8,8 @@ REDIS_PORT=6379
 PRIVATE_KEY=SHKODA
 
 DATABASE_URL="postgresql://postgres:admin@localhost:5432/Joosi?schema=public"
+
+AWS_REGION=eu-central-1
+AWS_ACCESS_KEY_ID=AKIA6BGIF76PBV65OPMO
+AWS_SECRET_ACCESS_KEY=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
+AWS_PUBLIC_BUCKET_NAME=joosi
