--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "@prisma/client": "^4.11.0",
+    "@types/aws-sdk": "^2.7.0",
+    "aws-sdk": "^2.1373.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "nestjs-prisma": "^0.20.0",
     "nestjs-redis": "^1.3.3",
     "passport": "^0.6.0",
@@ -49,6 +52,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.18",
     "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.11",
