--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.4.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/websockets": "^9.4.0",
     "@prisma/client": "^4.11.0",
     "@types/aws-sdk": "^2.7.0",
     "aws-sdk": "^2.1373.0",
