--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "cross-env": "^7.0.3",
     "nestjs-prisma": "^0.20.0",
     "nestjs-redis": "^1.3.3",
     "passport": "^0.6.0",
