--- a/.development.env
+++ b/.development.env
@@ -1,5 +1,5 @@
 PORT=5000
-POSTGRES_HOST=postgres
+POSTGRES_HOST=postgres_cp
 POSTGRES_USER=postgres
 POSTGRES_DB=Joosi
 POSTGRES_PASSWORD= admin
@@ -7,6 +7,7 @@ POSTGRES_PORT=5432
 PRIVATE_KEY=secret_key
 REDIS_HOST=redis_cp
 REDIS_PORT=6379
+DATABASE_URL="postgresql://postgres:admin@postgres_cp:5432/Joosi?schema=public"
 
 AWS_REGION=eu-central-1
 AWS_ACCESS_KEY_ID=AKIA6BGIF76PBV65OPMO
