--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,30 @@
 version: '4.6.13'
 
 services:
+  app: 
+    container_name: app
+    image: joosi
+    env_file: 
+      - .development.env
+    ports: 
+      - 5000:5000
+      - 5001:5001
+    networks:
+      - joosi
+    depends_on:
+      - postgres_cp
+      - redis_cp
+  
+  front:
+    container_name: front
+    image: joosi-fe
+    ports:
+      - 3000:80
+    networks:
+      - joosi
+    depends_on:
+      - app
+
   postgres_cp:
     container_name: postgres_cp
     image: postgres:15
