--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,7 +3,7 @@ version: '4.6.13'
 services:
   app: 
     container_name: app
-    image: joosi
+    image: shkodunishka/joosi:v1
     env_file: 
       - .development.env
     ports: 
@@ -17,7 +17,7 @@ services:
   
   front:
     container_name: front
-    image: joosi-fe
+    image: shkodunishka/joosi_fe:v1
     ports:
       - 3000:80
     networks:
